[gd_scene load_steps=20 format=3 uid="uid://b6lrdrncnh5mc"]

[ext_resource type="Script" path="res://UI/ui.gd" id="1_bpnij"]
[ext_resource type="Script" path="res://UI/inventory.gd" id="1_mgojl"]
[ext_resource type="Script" path="res://spells/lib/spell_resource.gd" id="2_ki4r3"]
[ext_resource type="Texture2D" uid="uid://by7rxvdr7fh1k" path="res://reference_assets/Custom Border and Panels Menu All Part/Border All 6.png" id="2_t8prn"]
[ext_resource type="Texture2D" uid="uid://cmcljisii1yyj" path="res://reference_assets/Custom Border and Panels Menu All Part/Deco All 1.png" id="3_a20sh"]
[ext_resource type="Resource" uid="uid://lpa5g63m7o6i" path="res://spells/active/melee_attacks/water_jet/water_jet.tres" id="4_3cwwy"]
[ext_resource type="Script" path="res://UI/replacement_popup.gd" id="4_b4sof"]
[ext_resource type="Texture2D" uid="uid://c41f5e4w2gov3" path="res://reference_assets/Custom Border and Panels Menu All Part/Border All 8.png" id="5_j3kdt"]
[ext_resource type="Texture2D" uid="uid://eawrklxt2lx2" path="res://reference_assets/Custom Border and Panels Menu All Part/Border All 10.png" id="7_5ve4o"]
[ext_resource type="Script" path="res://UI/healthbar.gd" id="8_6sx7t"]
[ext_resource type="Script" path="res://UI/main_menu.gd" id="9_gehl7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fsrp1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mepd1"]
atlas = ExtResource("7_5ve4o")
region = Rect2(269, 66, 38, 4)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8bkw"]
atlas = ExtResource("5_j3kdt")
region = Rect2(269, 66, 38, 4)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7jpfk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4tsya"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qs01f"]

[sub_resource type="LabelSettings" id="LabelSettings_j27fq"]
font_size = 8

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7jl38"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_bpnij")
metadata/_edit_use_anchors_ = true

[node name="Inventory" type="MarginContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3
script = ExtResource("1_mgojl")
max_actives = 4
max_passives = 1
spells = Array[ExtResource("2_ki4r3")]([ExtResource("4_3cwwy")])

[node name="Hotbars" type="VBoxContainer" parent="Inventory"]
layout_mode = 2

[node name="Actives" type="PanelContainer" parent="Inventory/Hotbars"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_fsrp1")

[node name="NinePatchRect" type="NinePatchRect" parent="Inventory/Hotbars/Actives"]
layout_mode = 2
texture = ExtResource("2_t8prn")
region_rect = Rect2(64, 64, 64, 64)
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="MarginContainer" type="MarginContainer" parent="Inventory/Hotbars/Actives"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ActiveSpells" type="HBoxContainer" parent="Inventory/Hotbars/Actives/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 16)
layout_mode = 2
theme_override_constants/separation = 0

[node name="ActiveIndicator" type="Sprite2D" parent="Inventory/Hotbars/Actives/MarginContainer"]
unique_name_in_owner = true
texture = ExtResource("3_a20sh")
offset = Vector2(16, 2)
region_enabled = true
region_rect = Rect2(464, 313, 16, 16)

[node name="Passives" type="PanelContainer" parent="Inventory/Hotbars"]
layout_mode = 2

[node name="PassiveSpells" type="HBoxContainer" parent="Inventory/Hotbars/Passives"]
unique_name_in_owner = true
layout_mode = 2

[node name="Health" type="MarginContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0
size_flags_vertical = 8
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="TextureProgressBar" type="TextureProgressBar" parent="Health"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
value = 50.0
texture_under = SubResource("AtlasTexture_mepd1")
texture_progress = SubResource("AtlasTexture_a8bkw")
script = ExtResource("8_6sx7t")

[node name="ControlHints" type="PanelContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -157.0
offset_top = -99.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxEmpty_7jpfk")

[node name="GridContainer" type="VBoxContainer" parent="ControlHints"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_constants/separation = 0

[node name="Throw" type="RichTextLabel" parent="ControlHints/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_font_sizes/normal_font_size = 8
text = "Grab"
fit_content = true
autowrap_mode = 0

[node name="Interact" type="RichTextLabel" parent="ControlHints/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
theme_override_font_sizes/normal_font_size = 8
text = "Interact"
fit_content = true
autowrap_mode = 0

[node name="PickupPopup" type="PanelContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_4tsya")
script = ExtResource("4_b4sof")

[node name="Dimmer" type="ColorRect" parent="PickupPopup"]
layout_mode = 2
color = Color(0, 0, 0, 0.541176)

[node name="PanelContainer" type="PanelContainer" parent="PickupPopup"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxEmpty_qs01f")

[node name="NinePatchRect" type="NinePatchRect" parent="PickupPopup/PanelContainer"]
layout_mode = 2
texture = ExtResource("5_j3kdt")
region_rect = Rect2(0, 0, 64, 64)
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="MarginContainer" type="MarginContainer" parent="PickupPopup/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Content" type="VBoxContainer" parent="PickupPopup/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="NewIcon" type="TextureRect" parent="PickupPopup/PanelContainer/MarginContainer/Content"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
stretch_mode = 2

[node name="NewName" type="Label" parent="PickupPopup/PanelContainer/MarginContainer/Content"]
layout_mode = 2
text = "Example"
label_settings = SubResource("LabelSettings_j27fq")
horizontal_alignment = 1

[node name="NewDesc" type="RichTextLabel" parent="PickupPopup/PanelContainer/MarginContainer/Content"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 8
text = "this is a description."
fit_content = true

[node name="InventoryFull" type="VBoxContainer" parent="PickupPopup/PanelContainer/MarginContainer/Content"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="PickupPopup/PanelContainer/MarginContainer/Content/InventoryFull"]
layout_mode = 2
text = "Inventory full!
Choose a spell to replace:"
label_settings = SubResource("LabelSettings_j27fq")
horizontal_alignment = 1

[node name="CurrentSpells" type="HBoxContainer" parent="PickupPopup/PanelContainer/MarginContainer/Content/InventoryFull"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Accept" type="Button" parent="PickupPopup/PanelContainer/MarginContainer/Content"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Accept"

[node name="Cancel" type="Button" parent="PickupPopup/PanelContainer/MarginContainer/Content"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Cancel"

[node name="MainMenu" type="PanelContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_7jl38")
script = ExtResource("9_gehl7")

[node name="Dimmer" type="ColorRect" parent="MainMenu"]
layout_mode = 2
color = Color(0, 0, 0, 0.541176)

[node name="CenterContainer" type="CenterContainer" parent="MainMenu"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/CenterContainer"]
layout_mode = 2

[node name="Quit" type="Button" parent="MainMenu/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="ProgressBar" type="ProgressBar" parent="MainMenu/CenterContainer/VBoxContainer/Quit"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
max_value = 60.0
step = 1.0
value = 50.0
show_percentage = false

[node name="Reset" type="Button" parent="MainMenu/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Reset"

[node name="Continue" type="Button" parent="MainMenu/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Continue"

[connection signal="pressed" from="PickupPopup/PanelContainer/MarginContainer/Content/Accept" to="PickupPopup" method="_accept"]
[connection signal="pressed" from="PickupPopup/PanelContainer/MarginContainer/Content/Cancel" to="PickupPopup" method="_cancel"]
[connection signal="pressed" from="MainMenu/CenterContainer/VBoxContainer/Quit" to="MainMenu" method="_on_quit_pressed"]
[connection signal="pressed" from="MainMenu/CenterContainer/VBoxContainer/Reset" to="MainMenu" method="_on_reset_pressed"]
[connection signal="pressed" from="MainMenu/CenterContainer/VBoxContainer/Continue" to="MainMenu" method="_on_continue_pressed"]
